- Select games can now be preloaded allowing an extended Mod Menu+.

Mod Menu updates:
- Crash Nitro Kart - Mod Menu+ enabled (All)
- Crash Twinsanity - Mod Menu+ enabled (PS2)
- Rayman 3: Hoodlum Havoc - Mod Menu+ enabled (GCN)

Crash Bandicoot 2: Cortex Strikes Back:
- New feature: Randomize World Textures
- New feature: Randomize Object Colors
- New feature: Randomize Object Textures
- New feature: Randomize Streamed Audio
- New feature: Ranodmize Pants Color
- Pants color can now be customized in the Mod Menu

Crash Bandicoot: WARPED:
- New feature: Randomize World Textures
- New feature: Randomize Object Colors
- New feature: Randomize Object Textures
- New feature: Randomize Streamed Audio
- New feature: Ranodmize Pants Color
- Pants color can now be customized in the Mod Menu

Crash Twinsanity:
- New feature: Classic Health
- New feature: Classic Explosion Damage
- Fixed default values for character health

1.2.1

Crash Twinsanity:
- Fixed processing errors in some versions of the game

1.2.0

General:  
- Added support for Xbox 360 ROMs and directories (can only output to folder).  
- Improved Xbox ROM detection speed.  
- Added a warning if the program fails to verify a Mod Crate.  
- Console/Region specific options will not appear on unsupported versions anymore.  
- The window will now flash when the process is complete.  
- Options now show a description when selected.  
- Mod Menus have been implemented. Variables can be edited in the menu, loaded from a text file or Mod Crate, and saved to a text file or Mod Crate.
- Mod Crate metadata now supports localization. Set Name-xx and Description-xx with a valid ISO 639-1 country code for it to be displayed in that language. (ex. Name-de (German), Name-es (Spanish) etc.)
(language switching is planned to be added in the future, right now it will honor the system default)

Mod Menu updates:
- Crash Nitro Kart - Added Mod Menu
- Crash Twinsanity - Added Mod Menu
  